--- a/src/app/components/aside/aside.component.html
+++ b/src/app/components/aside/aside.component.html
@@ -5,7 +5,9 @@
 
   <div class="identifiers" *ngFor="let item of filteredUsers; let i = index">
     <label>
-      <input type="checkbox" />
+      <input type="checkbox"
+      (change)="onUserIdSelect(item.id)"
+      [disabled]="isDisabled(item.id)"/>
       {{ item.id }}
     </label>
   </div>
