--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,9 +1,10 @@
 .header-wrap {    
     width: 100%;
-    height: 60px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 1px 2px 8px  rgba(0,0,0, .6);
+    /* border: 1px solid rgb(198, 191, 191); */
+    box-shadow: 0px 1px 6px  rgba(0,0,0, .5);
     }
     
