--- a/src/app/components/aside/aside.component.css
+++ b/src/app/components/aside/aside.component.css
@@ -1,6 +1,6 @@
 .aside-wrap {
   border: 1px solid rgb(198, 198, 198);
-  width: 40%;
+  width: 30%;
   height: calc(100% - 40px);
   margin: 3px;
   padding: 3px;
@@ -10,6 +10,14 @@ img {
   width: 22px;
 }
 
+.search-wrap {
+  width: 175px;
+  margin: 0 auto;
+}
+
+.search-wrap input {
+  width: 100%;
+}
 
 ::placeholder {
   background: url("../../../assets/pics/search_icon.svg");
@@ -18,15 +26,17 @@ img {
 }
 
 .select-all-button {
-  width: 173.6px;
+  width: 175px;
   height: 20.8px;
-  margin: 15px 0;
+  display: block;
+  margin: 15px auto;
  
 }
 
 .identifiers {
   /* border: 1px solid black; */
   width: 173.6px;
+  width: 100%;
   height: 30px;
   display: flex;
   align-items: center;
