--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,6 @@
 .home-wrap {
-    /* border: 1px solid black; */
-    width: 80%;
-    margin: 0 auto;  
-    height: 100vh;
+    width: 680px;
+    height: 600px;
+
     box-shadow: 1px 2px 8px  rgba(0,0,0, .6);
 }
