--- a/src/app/components/aside/aside.component.css
+++ b/src/app/components/aside/aside.component.css
@@ -1,6 +1,5 @@
 .aside-wrap {
-  border: 1px solid rgb(198, 198, 198);
-  width: 30%;
+  border-right: 1px solid rgb(226, 226, 226);
   height: calc(100% - 40px);
   margin: 3px;
   padding: 3px;
@@ -30,7 +29,6 @@ img {
   height: 20.8px;
   display: block;
   margin: 15px auto;
- 
 }
 
 .identifiers {
@@ -46,6 +44,25 @@ img {
 .identifiers:nth-child(odd) {
   background-color: rgb(240, 237, 237);
 }
+
 .identifiers:nth-child(even) {
   background-color: rgb(249, 246, 246);
 }
+
+
+  @media (min-width: 1350px) {
+
+  .search-wrap {
+    width: 230px;
+  }
+
+  .search-wrap input {
+    width: 100%;
+    height: 25px;
+  }
+
+  .select-all-button {
+    width: 230px;
+    height: 25px;  
+  }
+} 
