--- a/src/app/components/details/details.component.css
+++ b/src/app/components/details/details.component.css
@@ -1,28 +1,68 @@
-.description {
-    border-bottom: 1px solid rgb(170, 170, 170);
+.description, .details-items {
+    border-bottom: 2px solid rgb(162, 146, 6);
+    width: 350px;
+    margin: 0 auto;
+    height: 40px;
     display: grid;
-    height: 50px;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
-    font-weight: bold;
     font-size: 1.2rem;
+    font-weight: bold;
+    background-color: rgb(174, 159, 23);
+}
+
+.description > div:nth-child(1) {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid rgb(162, 146, 6);
 }
 
 .details-items {
-    width: 100%;
-    height: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    
+  font-size: 1rem;
+  font-weight: 400;
+  background-color:unset;
+  border: none;
 }
 
+.details-items .detail-key {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid rgb(162, 146, 6);
+  border-left: 1px solid rgb(162, 146, 6);
+}
+
+.details-items .detail-value {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid rgb(162, 146, 6);
+}
+
+.details-items:last-child {
+  border-bottom: 1px solid rgb(162, 146, 6);
+}
+
+
 .details-items:nth-child(odd) {
-    background-color: rgb(196, 194, 194)
+  background-color: rgb(233, 226, 159);
+}
+
+.details-items:nth-child(even) {
+    background-color: rgb(240, 231, 190);
   }
-  
-  .details-items:nth-child(even) {
-    background-color: rgb(249, 246, 246);
-  }
+
+  @media (min-width: 1350px)  {
+    .description, .details-items{
+        width: 600px;
+      
+    }
+}
