--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(10, 1fr);
+    background-color: rgb(247, 242, 198);
 }
 
 
