--- a/src/app/components/aside/aside.component.css
+++ b/src/app/components/aside/aside.component.css
@@ -31,6 +31,15 @@ img {
   height: 20.8px;
   display: block;
   margin: 15px auto;
+  background-color: rgb(233, 226, 159);
+  border: none;
+  cursor: pointer;
+  /* transition: box-shadow 0.1s ease; */
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.select-all-button:active {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .identifiers {
