--- a/src/app/components/symbols/symbols.component.html
+++ b/src/app/components/symbols/symbols.component.html
@@ -1,3 +1,25 @@
-<div class="symbols-content">
-<p>symbols works!</p>
+<div class="symbols-wrap">
+  <div class="inputs upper-box">
+
+    <div class="ssi-type">SSI típusa</div>
+
+   
+      <select id="select-ssi-type">
+        <option value="">Válassz!</option>
+        <option value="">Mentő autó</option>
+        <option value="">Rendőr autó</option>
+        <option value="">BVOP</option>
+        <option value="">Katasztrófa</option>
+      </select>
+    
+
+    <div class="ssi-symbol">Szimbólum kiválasztása</div>
+    <div class="symbol-search">
+        <input type="text" id="symbol-search-field" placeholder=" ">
+    </div>
+  </div>
+
+  <div class="symbols bottom-box">
+        SZIMBÓLUMOK
+  </div>
 </div>
