--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,3 +1,5 @@
+<div class="details-wrap">
+  <img src="../../../assets/pics/database-settings.svg" alt="">
 <div class="description">
   <div>Adat</div>
   <div>Küldendő</div>
@@ -8,4 +10,6 @@
     <div class="detail-key">{{ item.key }}</div>
     <div class="detail-value">{{ item.value }}</div>
   </div>
+</div>
+
 </div>
