--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-wrap">
-    <p class="header-content">
-        USERS HEADER
+    <p class="header-title">
+        SSI BEÁLLÍTÁS
     </p>
 </div>
 
