--- a/src/app/components/symbols/symbols.component.html
+++ b/src/app/components/symbols/symbols.component.html
@@ -6,20 +6,26 @@
    
       <select id="select-ssi-type">
         <option value="">Válassz!</option>
-        <option value="">Mentő autó</option>
-        <option value="">Rendőr autó</option>
-        <option value="">BVOP</option>
-        <option value="">Katasztrófa</option>
+        <option value="">Típus 1</option>
+        <option value="">Típus 2</option>
+        <option value="">Típus 3</option>
+        <option value="">Típus 4</option>
       </select>
     
 
     <div class="ssi-symbol">Szimbólum kiválasztása</div>
-    <div class="symbol-search">
-        <input type="text" id="symbol-search-field" placeholder=" ">
-    </div>
+ 
+      <select id="select-symbol-search">
+        <option value="">Válassz!</option>
+        <option value="">Szimbólum 1</option>
+        <option value="">Szimbólum 2</option>
+        <option value="">Szimbólum 3</option>
+        <option value="">Szimbólum 4</option>
+      </select>
+      
+   
   </div>
-
   <div class="symbols bottom-box">
-        SZIMBÓLUMOK
+    SZIMBÓLUMOK
   </div>
 </div>
